# agent-project-template

./: .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PROJECT_SPEC.md  README.md  SETUP_GUIDE.md  ecosystem.md  setup.bat  setup.sh  start.bat  start.sh
.claude/: settings.json
.claude/agents/: PROTOCOL.md  devops.md  documenter.md  implementer.md  profiler.md  researcher.md  reviewer.md  security-auditor.md  simplifier.md  test-engineer.md  writer.md
.claude/commands/: audit-tools.md  mode-code.md  mode-design.md  mode-fix.md  mode-plan.md  mode-research.md  mode-review.md  mode-write.md  (+2 more)
.codex/: config.toml  hooks.json
_reference/: tool-registry.md
desktop/: .gitignore  package-lock.json  package.json  watchdog.ps1
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: api_server.rs  commands.rs  lib.rs  main.rs  scanner.rs  state.rs
desktop/src-tauri/src/commands/: agents.rs  chat.rs  claude_runner.rs  config.rs  delegation.rs  feed.rs  mod.rs  ops.rs  proxy.rs  strategy.rs  strategy_models.rs
docs/: AGENT_CONTEXT_SOT.md  AGENT_PIPELINES.md  CODEX_FANOUT_PATTERNS.md  CODEX_SKILLS_AUDIT.md  CODEX_SUBAGENTS_AUDIT.md  MIGRATION_MATRIX.md  OPENAI_MODEL_GUIDANCE.md  PRODUCT_BOUNDARY.md  RELEASE_CHECKLIST.md  SAFE_DEFAULTS.md  SHARED_CONVENTIONS.md  SUPPORTED_ENVIRONMENTS.md  TEMPLATE_RELEASES.md
integrations/: codesight.md
n8n/: README.md  build-dashboard.py  import.sh  setup.sh  start.sh
scripts/: audit-reuse.sh  blast-radius.sh  bootstrap-mcp.sh  check-banlist.sh  check-drift.sh  codex-hook-adapter.sh  codex-route-task.js  context-restore.sh  decode-sprites.py  downstream-census.sh  generate-project-spec.sh  import-graph.sh  init-spec-kit.sh  measure-context.sh  module-status.sh  plan-scaffold.sh  research.sh  route-task.sh  scan-project.sh  scan-projects-fast.py  scan-projects.sh  scan-repo.sh  session-metrics.sh  set-mode.sh  sync-agents.sh  sync-all.sh  sync-spec-kit.sh  sync-template.sh  task-brief.sh  test-codex-routing.js  test-codex-subagents-live.sh  test-template.sh  validate-agent-sot.js  validate-codex-agents.js  validate-codex-skills.js  validate-spec-kit.js  validate-template.sh  verify-check.sh
tasks/: .research-cache.md  current.md  debug-recovery-log.md  goals.md  lessons.md  queue.md  template-production-ready-plan.md
(+181 files in other folders)
