[package]
name = "agent-os"
version = "0.2.0"
description = "Agent OS — Desktop command center for AI agents"
edition = "2021"

[lib]
name = "agent_os_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs", "io-util", "macros", "rt-multi-thread", "time", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-updater = "2.10.1"
axum = { version = "0.8.8", features = ["json"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
